Add strings to resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="clear_screen_content_description">Clear screen</string>
 
     <string name="privacy_policy_web_link">https://korsumaki.github.io/wifi-radar/PRIVACY.html</string>
+    <string name="permission_and_data_usage_title">Wifi Radar permissions and Data usage</string>
+    <string name="permission_and_data_usage_text">Wifi Radar requires Location permission for scanning WiFi networks.\nWiFi networks are scanned only when Application is in use, newer on background.\nWiFi scan results are used to create and show relative map about WiFi networks and User\'s movement around those.</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+
 </resources>
